--- a/Clase4_OptimizacionSympy.ipynb
+++ b/Clase4_OptimizacionSympy.ipynb
@@ -474,14 +474,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.nuestra_f(x)>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Definimos una función en Python\n",
     "\n",
     "def nuestra_f(x):\n",
-    "    return (x-2)**2\n"
+    "    return (x-2)**2\n",
+    "\n"
    ]
   },
   {
