se agrego codigo al examen

--- a/T6_FranciscoMadrazo.ipynb
+++ b/T6_FranciscoMadrazo.ipynb
@@ -192,9 +192,11 @@
    "source": [
     "# Definicion de los límites del rectángulo\n",
     "\n",
-    "\n",
+    "#parte de x\n",
     "a1 = -3\n",
     "b1=1\n",
+    "\n",
+    "#parte de y\n",
     "a2=0\n",
     "b2=4\n",
     "\n",
